--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 VITE_DEEPSEEK_API_KEY=sk-c597bc327b1a4617b34cdd48af20dd6a
 VITE_GEMINI_API_KEY=AIzaSyCdDpxFfhVivAOR0wsXeoLRineP-_W4w38
+VITE_COHERE_API_KEY=BjVVZhgU55bT1eniek8XRPLi5hTKilu8HkShtMC2
