--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "axios": "^1.8.4",
     "langchain": "^0.3.23",
     "lucide-react": "^0.344.0",
+    "papaparse": "^5.5.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-heatmap-grid": "^0.9.1",
+    "recharts": "^2.15.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
